--- a/Kiwipedia2.0/Kiwipedia2.0.csproj
+++ b/Kiwipedia2.0/Kiwipedia2.0.csproj
@@ -207,6 +207,7 @@
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Image.cs" />
+    <Compile Include="Models\KiwipediaDbContext.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
