Rework la baza de date
Index, new, sort si filtre

--- a/Kiwipedia2.0/Kiwipedia2.0.csproj
+++ b/Kiwipedia2.0/Kiwipedia2.0.csproj
@@ -203,6 +203,7 @@
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Article.cs" />
+    <Compile Include="Models\ArticleData.cs" />
     <Compile Include="Models\ArticleVersion.cs" />
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\IdentityModels.cs" />
