--- a/Kiwipedia2.0/Web.config
+++ b/Kiwipedia2.0/Web.config
@@ -13,7 +13,8 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Kiwipedia2.0-20181225111218.mdf;Initial Catalog=aspnet-Kiwipedia2.0-20181225111218;Integrated Security=True"
       providerName="System.Data.SqlClient" />
-    <add name="DBConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Andrey\Documents\GitHub\Kiwipedia2.0\Kiwipedia2.0\App_Data\KiwipediaDB.mdf;Integrated Security=True;MultipleActiveResultSets=true;"
+    <add name="DBConnectionString"
+         connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Madalina\source\repos\Kiwipedia2.0\Kiwipedia2.0\App_Data\KiwipediaDB.mdf;Integrated Security=True;MultipleActiveResultSets=true"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
