--- a/Kiwipedia2.0/bin/Kiwipedia2.0.dll.config
+++ b/Kiwipedia2.0/bin/Kiwipedia2.0.dll.config
@@ -11,7 +11,7 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Kiwipedia2.0-20181225111218.mdf;Initial Catalog=aspnet-Kiwipedia2.0-20181225111218;Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Kiwipedia2.0-20181225111218.mdf;Initial Catalog=aspnet-Kiwipedia2.0-20181225111218;Integrated Security=True;MultipleActiveResultSets=true"
       providerName="System.Data.SqlClient" />
     <add name="DBConnectionString"
          connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Madalina\source\repos\Kiwipedia2.0\Kiwipedia2.0\App_Data\KiwipediaDB.mdf;Integrated Security=True;MultipleActiveResultSets=true"
