--- a/Kiwipedia2.0/Kiwipedia2.0.csproj
+++ b/Kiwipedia2.0/Kiwipedia2.0.csproj
@@ -210,6 +210,7 @@
     <Compile Include="Models\Image.cs" />
     <Compile Include="Models\KiwipediaDbContext.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\NewArticleData.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
